add api git test

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     change: tests that modify the name of a user
     check: tests that check user name
     http: tests that check http Protocol
+    api: tests api
